# Observability_Microservice_TTS

./: README.md  README2.md  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/routes/: monitoring.py  tts.py
app/core/: config.py  lifecycle.py  logger.py
app/middleware/: observability.py
app/observability/: metrics.py  metrics_snapshot.py  monitoring_service.py
app/services/: tts_service.py
output/: 1771396063_8b3c31b3.json  1771396654_5df92716.json  1771396654_5df92716_metrics.json  1771400102_3247a1d5.json  1771400102_3247a1d5_metrics.json
