[project]
name = "tts-observability-microservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.0",
    "gtts>=2.5.4",
    "prometheus-client>=0.24.1",
    "pydantic-settings>=2.13.0",
    "uvicorn>=0.41.0",
]
